--- a/bower.json
+++ b/bower.json
@@ -7,8 +7,8 @@
   ],
   "ignore": [],
   "dependencies": {
-    "angular": ">=1.3.x",
-    "angular-aria": "~1.4.7",
-    "moment": "*"
+    "angular": ">=1.4.x",
+    "angular-aria": "*",
+    "polymer": "Polymer/polymer#^1.2.0"
   }
 }
