--- a/bower.json
+++ b/bower.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "angular": "*",
     "angular-aria": "*",
+    "angular-strap": "*",
     "polymer": "Polymer/polymer"
   }
 }
